# mayastor-control-plane

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  shell.nix
.cargo/: config.toml
control-plane/agents/: Cargo.toml
control-plane/agents/src/: lib.rs
control-plane/agents/src/common/: errors.rs
control-plane/csi-driver/: Cargo.toml  build.rs
control-plane/csi-driver/src/: context.rs
control-plane/grpc/: Cargo.toml  build.rs
control-plane/grpc/proto/v1/node/: node.proto
control-plane/grpc/proto/v1/pool/: pool.proto
control-plane/grpc/proto/v1/volume/: volume.proto
control-plane/grpc/src/: lib.rs  tracing.rs
control-plane/grpc/src/operations/app_node/: client.rs
control-plane/grpc/src/operations/nexus/: traits.rs
control-plane/grpc/src/operations/node/: client.rs  server.rs  traits.rs
control-plane/grpc/src/operations/pool/: client.rs  server.rs  traits.rs
control-plane/grpc/src/operations/replica/: traits.rs
control-plane/grpc/src/operations/volume/: traits.rs  traits_snapshots.rs
control-plane/plugin/: Cargo.toml
control-plane/plugin/src/: lib.rs  rest_wrapper.rs
control-plane/plugin/src/resources/: node.rs  pool.rs  utils.rs
control-plane/rest/: Cargo.toml
control-plane/rest/openapi-specs/: v0_api_spec.yaml
control-plane/rest/service/src/: authentication.rs  main.rs
control-plane/rest/service/src/v0/: children.rs  nexuses.rs  nodes.rs  pools.rs  replicas.rs  volumes.rs
control-plane/rest/src/versions/: v0.rs
control-plane/stor-port/: Cargo.toml
control-plane/stor-port/src/transport_api/: mod.rs
control-plane/stor-port/src/types/: mod.rs
control-plane/stor-port/src/types/v0/store/: nexus_child.rs  nexus_persistence.rs  node.rs  pool.rs  replica.rs  switchover.rs  volume.rs
control-plane/stor-port/src/types/v0/transport/: mod.rs  pool.rs  replica.rs  volume.rs  watch.rs
deployer/: Cargo.toml
deployer/src/infra/: mod.rs
deployer/src/infra/csi-driver/: controller.rs  node.rs
k8s/forward/: Cargo.toml
k8s/forward/examples/: http-forward.rs  port-forward.rs
k8s/forward/src/: error.rs  http_forward.rs  lib.rs  port_forward.rs
k8s/operators/: Cargo.toml
k8s/operators/src/pool/: context.rs  error.rs  main.rs
k8s/operators/src/pool/diskpool/: client.rs  v1beta1.rs
k8s/operators/src/pool/diskpool/crd/: v1alpha1.rs  v1beta1.rs  v1beta2.rs
k8s/operators/src/pool/mayastorpool/: crd.rs
k8s/proxy/: Cargo.toml
k8s/proxy/src/: error.rs  lib.rs  proxy.rs
nix/: overlay.nix  sources.json
nix/lib/: rust.nix
nix/pkgs/images/: default.nix
nix/pkgs/paperclip/: default.nix  source.json
openapi/: Cargo.toml
openapi/src/: lib.rs
openapi/templates/default/actix/server/: api_mod.mustache
openapi/templates/default/tower-hyper/client/: api_clients.mustache  body.mustache  client.mustache  configuration.mustache
openapi/templates/default/tower-hyper/examples/: example.rs
rpc/: Cargo.toml  build.rs
rpc/src/: lib.rs
scripts/nix/: update-paperclip.sh
scripts/python/: test.sh
scripts/rust/: env-setup.sh  generate-openapi-bindings.sh
tests/bdd/: requirements.txt
tests/bdd/common/: operations.py
tests/bdd/features/ana/validate/: test_validate_nexus_swap.py
tests/bdd/features/capacity/thin/volume/: test_rebuild.py
tests/bdd/features/csi/controller/: test_controller.py  test_identity.py
tests/bdd/features/csi/node/: test_identity.py  test_parameters.py
tests/bdd/features/ha/core-agent/: test_target_switchover.py
tests/bdd/features/ha/node-agent/: test_path_replacement.py
tests/bdd/features/node/label/: feature.feature  label_node.py
tests/bdd/features/pool/create/: test_disks.py  test_name.py
tests/bdd/features/rebuild/: test_log_based_rebuild.py  test_rebuild.py
tests/bdd/features/snapshot/create/: test_feature.py
tests/bdd/features/snapshot/delete/: test_delete.py
tests/bdd/features/snapshot/garbage_collection/: test_garbage_collection.py
tests/bdd/features/snapshot/restore/: test_create.py  test_create_parameters.py  test_delete.py
tests/bdd/features/volume/create/: test_feature.py
tests/bdd/features/volume/nexus/: test_feature.py
tests/bdd/features/volume/replicas/: test_feature.py
tests/bdd/features/volume/topology/: pool-topology.feature  test_node_topology.py  test_pool_topology.py
tests/io-engine/: Cargo.toml
tests/io-engine/tests/: nexus.rs
utils/deployer-cluster/: Cargo.toml
utils/deployer-cluster/src/: lib.rs
utils/hyper-body/: Cargo.toml
utils/hyper-body/src/: lib.rs
utils/platform/: Cargo.toml
utils/pstor/: Cargo.toml
utils/pstor-usage/: Cargo.toml
utils/pstor-usage/src/: pools.rs  resources.rs
utils/pstor/src/: etcd.rs  etcd_keep_alive.rs
utils/shutdown/: Cargo.toml
utils/utils-lib/: Cargo.toml
utils/utils-lib/src/: constants.rs  tracing_telemetry.rs
utils/weighted-scoring/src/: range.rs
