[package]
name = "deployer"
description = "Deployer of control plane and data plane components"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deployer"
path = "bin/src/deployer.rs"

[lib]
name = "deployer_lib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../utils/dependencies/composer", default-features = false }
stor-port = { path = "../control-plane/stor-port" }
rpc = { path = "../rpc" }
utils = { path = "../utils/utils-lib" }
grpc = { path = "../control-plane/grpc" }
clap = { version = "4.5.20", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
async-trait = "0.1.83"
hyper-util = "0.1.10"
strum = "0.26.3"
strum_macros = "0.26.4"
paste = "1.0.15"
humantime = "2.1.0"
reqwest = { version = "0.12.9", default-features = false, features = ["multipart"] }
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.5.1", features = ["timeout", "util"] }
events-api = { path = "../utils/dependencies/apis/events" }
