[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[lib]
name = "openapi"
path = "src/lib.rs"

[features]
default = ["tower-client-rls", "tower-trace"]
actix-server = ["actix"]
actix-client = ["actix", "awc"]
actix = ["actix-web", "rustls"]
tower-client-rls = ["tower-client", "rustls_ring"]
tower-client-tls = ["tower-client", "hyper_tls_feat"]
tower-client = ["tower-hyper"]
tower-hyper = ["hyper", "tower", "tower-http", "http-body", "futures", "pin-project", "tokio"]
hyper_tls_feat = ["hyper-tls", "tokio-native-tls"]
rustls_feat = ["rustls", "webpki", "hyper-rustls"]
rustls_aws_lc_rs = ["rustls_feat", "rustls/aws-lc-rs", "hyper-rustls/aws-lc-rs"]
rustls_ring = ["rustls_feat", "rustls/ring", "hyper-rustls/ring"]
tower-trace = ["opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry", "opentelemetry", "opentelemetry-http", "tracing", "tracing-subscriber"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = { version = "^2.5", features = ["serde"] }
async-trait = "0.1.83"
dyn-clonable = "0.9.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde_urlencoded = "0.7"

# actix dependencies
actix-web = { version = "4.9.0", features = ["rustls-0_23"], optional = true }

awc = { version = "3.5.1", optional = true }
# tower and hyper dependencies
hyper = { version = "1.5.0", features = ["http1", "http2", "client"], optional = true }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2", "tokio", "service"] }
http-body-util = "0.1.2"
tower = { version = "0.5.1", features = ["timeout", "util", "limit"], optional = true }
tower-http = { version = "0.6.1", features = ["trace", "map-response-body", "auth"], optional = true }
tokio = { version = "1.41.0", features = ["full"], optional = true }
http-body = { version = "1.0.1", optional = true }
futures = { version = "0.3.31", optional = true }
pin-project = { version = "1.1.7", optional = true }
kube = { version = "0.94.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_24"] }
hyper-body = { path = "../utils/hyper-body" }

# SSL
rustls = { version = "0.23.16", default-features = false, optional = true }
rustls-pemfile = "2.2.0"
webpki = { version = "0.22.4", optional = true }
hyper-rustls = { version = "0.27.3", default-features = false, optional = true }
hyper-tls = { version = "0.6.0", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
# tracing and telemetry
opentelemetry-otlp = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", optional = true }
tracing-opentelemetry = { version = "0.27.0", optional = true }
opentelemetry = { version = "0.26.0", optional = true }
opentelemetry-http = { version = "0.26.0", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
