[package]
name = "rpc"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[dependencies]
tonic = "0.10.2"
bytes = "1.8.0"
prost = "0.12.1"
prost-derive = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.4"
