[package]
name = "agents"
description = "Control plane agent"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2021"

[lib]
name = "agents"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/bin/core/main.rs"

[[test]]
name = "core"
path = "src/bin/core/tests/test.rs"

[[bin]]
name = "jsongrpc"
path = "src/bin/jsongrpc/main.rs"

[[bin]]
 name = "agent-ha-node"
 path = "src/bin/ha/node/main.rs"

[[bin]]
 name = "agent-ha-cluster"
 path = "src/bin/ha/cluster/main.rs"

[dependencies]
anyhow = "1.0.92"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.10.2"
futures = "0.3.31"
serde_json = "1.0.132"
async-trait = "0.1.83"
dyn-clonable = "0.9.0"
snafu = "0.8.5"
humantime = "2.1.0"
state = "0.6.0"
http = "0.2.9"
reqwest = "0.12.9"
parking_lot = "0.12.3"
itertools = "0.13.0"
once_cell = "1.20.2"
indexmap = "2.6.0"
futures-util = { version = "0.3.31" }
crossbeam-queue = "0.3.11"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
opentelemetry = { version = "0.22.0" }
tracing = "0.1.40"
nix = { version = "0.29.0", default-features = false }
prost-types = "0.12.1"
url = "2.5.2"

grpc = { path = "../grpc" }
shutdown = { path = "../../utils/shutdown" }
rpc =  { path = "../../rpc"}
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
weighted-scoring = { path = "../../utils/weighted-scoring" }
events-api = { path = "../../utils/dependencies/apis/events" }

[target.'cfg(target_os="linux")'.dependencies]
tokio-udev = { version = "0.9.1" }

[dev-dependencies]
deployer-cluster = { path = "../../utils/deployer-cluster" }
events-api = { path = "../../utils/dependencies/apis/events" }
url = "2.5.2"
once_cell = "1.20.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.214"
