[package]
name = "csi-driver"
description = "CSI Driver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "csi-controller"
path = "src/bin/controller/main.rs"

[[bin]]
name = "csi-node"
path = "src/bin/node/main.rs"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13.3"

[dependencies]
prost = "0.13.3"
prost-derive = "0.13.3"
prost-types = "0.13.3"
tonic = "0.12.3"

anyhow = "1.0.92"
async-stream = "0.3.6"
futures = { version = "0.3.31", default-features = false }
humantime = "2.1.0"
once_cell = "1.20.2"
regex = "1.11.1"
rpc = { path = "../../rpc" }
grpc = { path = "../grpc" }
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["color", "env", "string"] }
nix = { version = "0.29.0", default-features = false, features = ["ioctl", "fs"] }
strum = "0.26.3"
strum_macros = "0.26.4"
heck = "0.5.0"
tracing = "0.1.40"
glob = "0.3.1"
lazy_static = "1.5.0"
serde_json = "1.0.132"
snafu = "0.8.5"
tower = { version = "0.5.1", features = ["timeout", "util"] }
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
which = "7.0.0"
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
kube = { version = "0.94.2", features = ["runtime", "derive"] }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
sysfs = { path = "../../utils/dependencies/sysfs" }
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
shutdown = { path = "../../utils/shutdown" }
serde = { version = "1.0.214", features = ["derive"] }

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.9.1"
devinfo = { path = "../../utils/dependencies/devinfo" }
sys-mount = { version = "3.0.1", default-features = false }
