[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grpc"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13.3"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"

tokio = { version = "1.41.0", features = ["full"] }
stor-port = { path = "../stor-port" }
humantime = "2.1.0"
utils = { path = "../../utils/utils-lib" }
rpc = { path = "../../rpc" }
uuid = { version = "1.11.0", features = ["v4"] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0" }
opentelemetry-http = { version = "0.26.0" }
opentelemetry-semantic-conventions = "0.26.0"
tracing = "0.1.40"
tower = { version = "0.5.1", features = ["timeout", "util"] }
serde_json = "1.0.132"
events-api = { path = "../../utils/dependencies/apis/events" }

[dev-dependencies]
once_cell = "1.20.2"
