[package]
name = "stor-port"
version = "0.1.0"
edition = "2021"
description = "Persistent store and transport associated information for the control-plane"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.132"
percent-encoding = "2.3.1"
tokio = { version = "1.41.0", features = [ "full" ] }
snafu = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_tuple = "1.0.0"
async-trait = "0.1.83"
dyn-clonable = "0.9.0"
rand = "0.8.5"
tonic = "0.12.3"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
prost-types = "0.13.3"

openapi = { path = "../../openapi", features = [ "actix-server", "tower-client", "tower-trace" ] }
platform = { path = "../../utils/platform" }
pstor = { path = "../../utils/pstor" }
utils = { path = "../../utils/utils-lib" }
