[package]
name = "kube-forward"
description = "A low-level Kubernetes forwarding library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.2", features = ["ws"] }
k8s-openapi = { version = "0.20.0", default-features = false, features = ["v1_22"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
futures = "0.3.31"
anyhow = "1.0.92"
tracing = "0.1.40"
shutdown = { path = "../../utils/shutdown" }
serde_json = "1.0.132"
#hyper = { version = "1.5.0", features = ["http1", "http2", "client"] }
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp", "stream"] }


[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
