[package]
name = "kube-forward"
description = "A low-level Kubernetes forwarding library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.94.2", features = ["ws"] }
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_24"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
futures = "0.3.31"
anyhow = "1.0.92"
tracing = "0.1.40"
shutdown = { path = "../../utils/shutdown" }
serde_json = "1.0.132"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["map-response-body"] }
hyper = { version = "1.5.0", features = ["client", "http1", "http2"] }
hyper-body = { path = "../../utils/hyper-body" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
