[package]
name = "io-engine-tests"
version = "1.0.0"

edition = "2018"
description = "Control Plane 'Compose' Tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testlib"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
openapi = { path = "../../openapi", features = ["tower-client", "tower-trace"] }
deployer-cluster = { path = "../../utils/deployer-cluster" }
stor-port = { path = "../../control-plane/stor-port" }
rpc = { path = "../../rpc" }
grpc = { path = "../../control-plane/grpc" }
utils = { path = "../../utils/utils-lib" }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
tracing = "0.1.40"
glob = "0.3.1"
