[package]
name = "pstor-usage"
description = "Persistent Storage Usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
openapi = { path = "../../openapi", default-features = false, features = ["tower-client", "tower-trace"] }
deployer-cluster = { path = "../../utils/deployer-cluster" }
utils = { path = "../utils-lib" }
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["color", "derive", "env", "string"] }
parse-size = { version = "1.1.0", features = ["std"] }
async-trait = "0.1.83"
etcd-client = "0.14.0"
prettytable-rs = "0.10.0"
serde = "1.0.214"
serde_yaml = "0.9.34"
itertools = "0.13.0"
