[package]
name = "pstor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = [ "full" ] }
snafu = "0.8.5"
etcd-client = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
async-trait = "0.1.83"
dyn-clonable = "0.9.0"
rand = "0.8.5"
tonic = "0.12.3"
tracing = "0.1.40"
parking_lot = "0.12.3"
utils = { path = "../utils-lib" }

# Utils dependencies
platform = { path = "../platform" }

[dev-dependencies]
composer = { path = "../dependencies/composer" }
tokio = { version = "1.41.0", features = [ "full" ] }
